crates/swc_ecma_react_compiler/tests/fixtures/upstream/preserve-memo-validation/error.false-positive-useMemo-overlap-scopes/error.txt
Found 1 error:

Compilation Skipped: Existing memoization could not be preserved

React Compiler has skipped optimizing this component because the existing manual memoization could not be preserved. This dependency may be mutated later, which could cause the value to change unexpectedly.

error.false-positive-useMemo-overlap-scopes.ts:23:9
  21 |   const result = useMemo(() => {
  22 |     return [Math.max(x[1], a)];
> 23 |   }, [a, x]);
     |          ^ This dependency may be modified later
  24 |   arrayPush(y, 3);
  25 |   return {result, y};
  26 | }
